fixed things (its 3:33am), need to fix still: scroll bar glitch hopping effect